change collections from LinkedList to ArrayList